Changelog:

3.22
- Added "Tranquillien, Ghostlands" as a required flight path for Solo route, as it links Silvermoon to EPL.
- Added back "Summoning Shadra" as a prequest to "Venom to the Undercity"
- SoloRoute Companion: Removed "Winterspring" as a mail pick-up spot, added "Stonard" as a mail pick-up spot. Now it matches the other routes.
- Redid rep requirements for the lords/dukes quests at Cenarion Hold.
> Abyssal Contacts Rep Requirement: Honored > None
> Aurel Goldleaf Rep Requirement: None > Friendly
> Dukes of the Council Rep Requirement: Honored > Friendly 
> Bor Wildmane Rep Requirement: None > Friendly
> Signet of the Dukes Rep Requirement: Revered > Friendly
> Goldleaf's Discovery Rep Requirement: None > Revered
> Bor Wishes to Speak Rep Requirement: None > Revered

3.21 (2026-01-27)
- Went through all addon files and cleaned up old/unused code, reducing filesize.
- Removed the 3.15 warning from the about page.
- Fixed lua errors happening if RXP or Questie addons aren't installed/enabled, when tbcprep checks if their quest automation is on.
- Companion: Fixed 'Bank Collect' not working if you didn't have room in the main backpack.
- Added many outland/tbc flight paths to our flightpath tracker
- Added a new command "/tbc resetmarkeditems" that resets all items that are marked to be stored elsewhere (alt, mailbox)
- Updated the "Manual Mail Help" guide on the Extras>Mailbox description, adding steps to mark items.

3.20 (2026-01-26)
- Profession requirements on quests should now work on non-english (enUS) wow clients. Please let us know if it doesn't work
- TBCPrep now turns off RXP & Questie quest automation 10 seconds after logging in / reloading. Can be disabled in the '/tbcprep' settings tab
- TBCprep now warns if RXP/Questie quest automation is enabled every 10 minutes in chat. Can be disabled in the '/tbcprep' settings tab
- It didn't seem possible to disable LeatrixPlus automation from our addon. Please turn it off yourself.